🐛 fix: spacing fixes

--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -57,3 +57,5 @@ $xl: 1280px;
 $xxl: 1536px;
 
 // ---------------
+
+$section-spacing: 3rem;
