--- a/src/scss/components/hor-scroll.scss
+++ b/src/scss/components/hor-scroll.scss
@@ -1,7 +1,8 @@
 .hor-scroll-container {
   margin: {
-    left: -2rem;
+    top: 2rem;
     right: -2rem;
+    left: -2rem;
   }
   padding-left: 1rem;
   background-color: hsla(148, 17%, 27%, 0.402);
