--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -6,6 +6,7 @@
     width: 30rem;
     height: 30rem;
   }
+  max-width: 375px;
   border-radius: 9999px;
   margin: auto;
   text-align: center;
